--- a/weather app/index.html
+++ b/weather app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="weather/style2.css">
+    <link rel="stylesheet" href="weather app/style2.css">
     <link rel="stylesheet" href=
 "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href=
@@ -41,7 +41,7 @@
     <script src=
 "https://momentjs.com/downloads/moment.min.js">
     </script>
-    <script src="weather/script2.js"></script>
+    <script src="weather app/script2.js"></script>
 </body>
 
 </html>
