--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="weather app/style2.css">
     <link rel="stylesheet" href=
-"https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+"weather app/https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+"weather app/https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href=
-"https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+"weather app/https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <title>GFG App</title>
 </head>
 
@@ -41,7 +41,7 @@
     <script src=
 "https://momentjs.com/downloads/moment.min.js">
     </script>
-    <script src="script2.js"></script>
+    <script src="weather app/script2.js"></script>
 </body>
 
 </html>
